--- a/server/.development.env
+++ b/server/.development.env
@@ -1,3 +1,4 @@
+MODE=development
 PORT=5000
 POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
@@ -5,3 +6,4 @@ POSTGRES_DB=vnivip
 POSTGRES_PASSWORD=root
 POSTGRES_PORT=5432
 PRIVATE_KEY=secret_key_safasf
+DB_DIALECT=postgres
