--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.14.1",
+    "express": "4.17.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
@@ -37,9 +38,9 @@
     "rxjs": "^6.6.3",
     "sequelize": "^6.6.2",
     "sequelize-typescript": "^2.1.0",
+    "sharp": "^0.31.0",
     "swagger-ui-express": "^4.1.6",
-    "uuid": "^8.3.2",
-    "express": "4.17.1"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
