--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,7 +1,7 @@
 /dist
 /node_modules
-/.development.env
-/.production.env
-/migrations
-/config
+.development.env
+.production.env
+migrations
+config
 /.idea
